--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1823,11 +1823,83 @@
       "withdraw_all": "Вывести все средства"
     },
     "guide": {
-      "title": "Поэтапный гайд",
-      "entity": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc.",
-      "individual": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc.",
-      "selfEmployedTransits": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc.",
-      "selfEmployedAccounts": "Lorem ipsum dolor sit amet consectetur. Tincidunt sed ut in massa pulvinar id. Volutpat aliquam in lectus fringilla mauris praesent convallis. Volutpat neque arcu condimentum cursus sit. Id auctor neque elementum ut turpis sed. Faucibus a posuere gravida vel amet vulputate fringilla. Pulvinar orci consectetur viverra nisi mauris ornare lobortis.\n\nNunc quis libero proin etiam quis lorem nisl. Et purus massa cras suscipit aliquet diam justo ac. In in vel tempor eget nisl ultricies vitae. Pretium netus dignissim ante feugiat quis nunc id lorem. Urna adipiscing urna nisi posuere vitae augue. Bibendum et est vehicula ac lacus praesent. Quam dapibus sem laoreet tristique non in. Sem a mattis massa eget justo felis id.\n\nAugue vitae diam blandit dictum proin tristique morbi suspendisse. In sed dictum pulvinar scelerisque viverra a. Donec ut cursus sit sed. Duis odio vestibulum justo nisi facilisi potenti. At quis luctus laoreet diam ac metus tortor cursus et. Massa consectetur diam enim viverra dapibus. Feugiat et proin purus fermentum sociis dolor. Vel porttitor quam ornare non interdum nunc."
+      "title": "Пошаговый гайд",
+      "topup": {
+        "title": "Как пополнить баланс организации",
+        "description": "Следуйте этим простым шагам для пополнения баланса вашей организации через систему Blogix",
+        "steps": [
+          {
+            "title": "Авторизация в системе didox.uz",
+            "description": "Войдите в систему с помощью ЭЦП. После успешной авторизации все реквизиты вашей организации заполняются автоматически."
+          },
+          {
+            "title": "Введите сумму пополнения",
+            "description": "Укажите сумму, на которую хотите пополнить баланс вашего кошелька."
+          },
+          {
+            "title": "Создание инвойса",
+            "description": "После ввода суммы и отправки заявки автоматически формируется инвойс."
+          },
+          {
+            "title": "Оплата инвойса через ваш банк",
+            "description": "Перечислите указанную сумму по реквизитам, указанным в инвойсе, со счета вашей организации на счет платформы Blogix."
+          },
+          {
+            "title": "Зачисление средств",
+            "description": "Как только банк подтвердит перевод по инвойсу, средства будут автоматически зачислены на ваш кошелек."
+          },
+          {
+            "title": "Уведомление о пополнении",
+            "description": "Вы получите уведомление по почте и внутри платформы о том, что баланс успешно пополнен."
+          }
+        ],
+        "note": {
+          "title": "Важная информация",
+          "description": "Обработка платежа может занять от нескольких минут до нескольких часов в зависимости от вашего банка. Если средства не поступили в течение 24 часов, обратитесь в службу поддержки."
+        }
+      },
+      "withdraw": {
+        "title": "Как вывести деньги из платформы",
+        "description": "Следуйте этим простым шагам для вывода денег из платформы через систему Blogix",
+        "steps": [
+          {
+            "title": "Выбор кошелька для вывода",
+            "description": "Укажите, с какого кошелька хотите вывести средства:",
+            "substeps": [
+              {
+                "title": "Депозитный кошелек",
+                "description": "используется для возврата ранее внесенных средств.",
+                "info": "Возврат оформляется как официальное письмо через Didox"
+              },
+              {
+                "title": "Прибыльный кошелек",
+                "description": "используется для вывода заработанных средств.",
+                "info": "Оформление документов не требуется, средства выводятся автоматически."
+              }
+            ]
+          },
+          {
+            "title": "Авторизация в системе didox.uz",
+            "description": "Войдите в систему с помощью ЭЦП. После успешной авторизации все реквизиты вашей организации заполняются автоматически."
+          },
+          {
+            "title": "Укажите сумму вывода",
+            "description": "Введите сумму, которую хотите вывести на расчетный счет вашей организации."
+          },
+          {
+            "title": "Перевод средств",
+            "description": "Средства перечисляются на расчетный счет вашей организации."
+          },
+          {
+            "title": "Уведомление о выводе",
+            "description": "Вы получите уведомление на почту и внутри платформы о том, что средства были успешно выведены."
+          }
+        ],
+        "note": {
+          "title": "Важная информация",
+          "description": "Обработка платежа может занять от нескольких минут до нескольких часов в зависимости от вашего банка. Если средства не поступили в течение 24 часов, обратитесь в службу поддержки."
+        }
+      }
     },
     "pay": {
       "title": "К списанию",
