--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2432,7 +2432,9 @@
     "accept": "Принять",
     "accept_title": "Выберите дату размещения",
     "accept_date": "Принять заказ",
-    "reason": "Причина"
+    "reason": "Причина",
+    "sign": "Подписать",
+    "signed": "Подписан"
   },
 
   "platform_btn": {
@@ -2672,6 +2674,17 @@
         "error": "При отправке ссылки на проверку произошла ошибка"
       }
     },
+    "documents": {
+      "sign": {
+        "success": "Документ успешно подписан",
+        "error": "Ошибка при подписании документа"
+      },
+      "create": {
+        "success": "Документ успешно создан",
+        "error": "При создании документа произошла ошибка"
+      }
+    },
+
     "orders_manager": {
       "edit_project": {
         "success": "Приступаем к редактированию рекламной кампании"
