--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -2119,7 +2119,9 @@
     "accept": "Qabul qilish",
     "accept_title": "Joylashtirish sanasini tanlang",
     "accept_date": "Buyurtmani qabul qilish",
-    "reason": "Sabab"
+    "reason": "Sabab",
+    "sign": "Qabul qilish",
+    "signed": "Qabul qilindi"
   },
 
   "platform_btn": {
@@ -2347,6 +2349,16 @@
       "send_link": {
         "success": "Havola tekshirish uchun muvaffaqiyatli yuborildi",
         "error": "Havolani tekshirish uchun yuborishda xatolik yuz berdi"
+      }
+    },
+    "documents": {
+      "sign": {
+        "success": "Hujjat muvaffaqiyatli imzolandi",
+        "error": "Hujjatni imzolashda xatolik yuz berdi"
+      },
+      "create": {
+        "success": "Hujjat muvaffaqiyatli yaratildi",
+        "error": "Hujjatni yaratishda xatolik yuz berdi"
       }
     },
     "orders_manager": {
