--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -917,7 +917,8 @@
         "text": "Напоминаем, что слишком частая отмена заказов может понизить ваш рейтинг"
       },
       "complete": {
-        "title": "Заказ выполнен"
+        "title": "Заказ выполнен",
+        "signed": "Документы подписаны"
       },
       "moderation": {
         "text": "Заказ не соответствует требованиям площадки Blogix. Ожидайте решение администратора"
