--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2531,7 +2531,8 @@
     },
     "turnkey": {
       "success": "Тариф куплен",
-      "error": "Ошибка покупки тарифа"
+      "error": "Ошибка покупки тарифа",
+      "error_wallet": "Выберите кошелек для покупки"
     },
     "websocket": {
       "new_message": "У вас новое сообщение",
