--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1042,6 +1042,11 @@
         "span": "в течение 24 часов",
         "text2": "с момента отправки"
       }
+    },
+
+    "success": {
+      "title": "Готово к добавлению",
+      "text": "Отлично! Все готово для добавления вашего канала. После отправки он пройдет модерацию и появится в каталоге для всех пользователей."
     }
   },
 
