--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2740,7 +2740,7 @@
       },
       "payment": {
         "success": "Рекламная кампания успешно оплачена и запущена!",
-        "error": "У вас недостаточно средств, нужно пополнить баланс"
+        "error": "У вас недостаточно средств на данном кошельке, нужно пополнить баланс"
       },
       "date": {
         "error": "Ошибка в создании дат для каналов",
@@ -2749,6 +2749,9 @@
       },
       "create_order": {
         "error": "Произошла ошибка"
+      },
+      "channels": {
+        "error": "Сначала нужно добавить каналы в корзину"
       }
     },
     "post": {
