--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -918,7 +918,8 @@
       },
       "complete": {
         "title": "Заказ выполнен",
-        "signed": "Документы подписаны"
+        "signed": "Документы подписаны",
+        "wait": "Ожидайте поступления средств на ваш счёт"
       },
       "moderation": {
         "text": "Заказ не соответствует требованиям площадки Blogix. Ожидайте решение администратора"
