fix: ctreate order - remove check balance role=manager

--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2664,7 +2664,8 @@
       },
       "payment": {
         "success": "Рекламная кампания успешно оплачена и запущена!",
-        "error": "У вас недостаточно средств на данном кошельке, нужно пополнить баланс"
+        "not_enough_balance": "У вас недостаточно средств на данном кошельке, нужно пополнить баланс",
+        "error": "Во время запуска рекламной кампании произошла ошибка"
       },
       "date": {
         "error": "Ошибка в создании дат для каналов",
