--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -2575,7 +2575,8 @@
       }
     },
     "cart": {
-      "error": "У вас недостаточно средств, нужно пополнить баланс"
+      "error": "У вас недостаточно средств, нужно пополнить баланс",
+      "save_cart_temporary_error": "Упс! Функционал в разработке..."
     },
     "offers_blogger": {
       "channel": {
