--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -197,24 +197,21 @@
   },
 
   "main_page_advertiser": {
-    "main_img": "mainAdv.png",
-    "cta_title": "Рекламные размещения в соцсетях без хлопот",
-    "cta_subtitle": "Только активные, проверенные вручную площадки",
-    "cta_list": [
-      {
-        "option": "Алгоритмы подбора целевой аудитории и подходящих площадок для вашей рекламы",
-        "img": "option1.svg"
-      },
-      {
-        "option": "Генерация эффективных рекламных постов на базе искусственного интеллекта",
-        "img": "option2.svg"
-      },
-      {
-        "option": "Гарантия защиты при помощи безопасной сделки",
-        "img": "option3.svg"
-      }
-    ],
-
+    "cta": {
+      "title": "Рекламные размещения в соцсетях без хлопот",
+      "subtitle": "Только активные, проверенные вручную площадки",
+      "options": [
+        {
+          "option": "Алгоритмы подбора целевой аудитории и подходящих площадок для вашей рекламы"
+        },
+        {
+          "option": "Генерация эффективных рекламных постов на базе искусственного интеллекта"
+        },
+        {
+          "option": "Гарантия защиты при помощи безопасной сделки"
+        }
+      ]
+    },
     "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
     "services_list": [
       {
@@ -424,23 +421,21 @@
   },
 
   "main_page_blogger": {
-    "main_img": "mainBlogger.png",
-    "cta_title": "Добавь канал сейчас и получи заказ",
-    "cta_subtitle": "Открой канал для заказов. Просто. Быстро. Доходно.",
-    "cta_list": [
-      {
-        "option": "Постоянно растущее количество рекламодателей для ваших каналов",
-        "img": "option4.svg"
-      },
-      {
-        "option": "Статистика по каждому каналу для эффективного анализа вашего контента",
-        "img": "option5.svg"
-      },
-      {
-        "option": "Быстрая и легальная система вывода средств",
-        "img": "option6.svg"
-      }
-    ],
+    "cta": {
+      "title": "Добавь канал сейчас и получи заказ",
+      "subtitle": "Открой канал для заказов. Просто. Быстро. Доходно.",
+      "options": [
+        {
+          "option": "Постоянно растущее количество рекламодателей для ваших каналов"
+        },
+        {
+          "option": "Статистика по каждому каналу для эффективного анализа вашего контента"
+        },
+        {
+          "option": "Быстрая и легальная система вывода средств"
+        }
+      ]
+    },
 
     "services_title": "Работаем с юрлицами, предоставляем счета, акты, ведём электронный документооборот через didox.uz",
     "services_list": [
