--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -946,7 +946,7 @@
       "link": {
         "title": "Укажите ссылку",
         "text": "Укажите ссылку на ваш канал, сохраняя необходимый формат",
-        "requerd": "Введите ссылку на канал",
+        "required": "Введите ссылку на канал",
         "invalid": "Ссылка недействительна",
         "verification": "Важно! Разместите указанный код в описании вашей площадки, это нужно для подтверждения владения площадкой. После успешной верификации, вы можете удалить данный код."
       }
