--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -950,7 +950,7 @@
       "link": {
         "title": "Havolani kiriting",
         "text": "Kanal havolasini kerakli formatda kiriting",
-        "requerd": "Kanal havolasini kiriting",
+        "required": "Kanal havolasini kiriting",
         "invalid": "Havola yaroqsiz",
         "verification": "Muhim! Kanalingiz tavsifiga ko'rsatilgan kodni joylashtiring, bu kanalga egalikni tasdiqlash uchun kerak. Muvaffaqiyatli tekshiruvdan so'ng, siz bu kodni o'chirib tashlashingiz mumkin."
       }
