--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -1743,7 +1743,7 @@
       "views": "Всего просмотров",
       "commission": "Комиссия сервиса",
       "finnaly": "Итоговая сумма",
-      "finnaly_short": "Сумма"
+      "finnaly_short": "Итого"
     },
 
     "recomendation": "Рекомендуемые площадки",
