--- a/public/locales/uz/translation.json
+++ b/public/locales/uz/translation.json
@@ -1438,7 +1438,7 @@
       "views": "Jami ko'rishlar",
       "commission": "Xizmat komissiyasi",
       "finnaly": "Yakuniy summa",
-      "finnaly_short": "Summa"
+      "finnaly_short": "Yakuniy"
     },
 
     "recomendation": "Tavsiya etilgan kanallar",
